# tts-v

./: .env.example  .gitignore  README.md  cli_implementation_plan_tts.md  pyproject.toml
.github/workflows/: tests.yml
configs/: infer.yaml  project.yaml  train.yaml  train_3090_quality.yaml  train_smoke.yaml
scripts/: normalize_vi_numbers.py  prepare_vi_csv_wavs.py  resample_to_24k.py  split_by_srt.py
src/voice_cli/: __main__.py  cli.py  config.py  console.py  f5_wrapper.py  import_data.py  infer.py  io.py  manifest.py  normalize_numbers.py  prepare_vi_csv_wavs.py  train.py  validate.py
src/voice_cli/adapters/: __init__.py  f5_dataset.py  gpt_sovits.py  raw_pairs.py
tests/: test_import_validate.py  test_normalize_numbers.py  test_runtime_behaviors.py  test_train_vi_prepare.py
